fixed line breaks intro paragraph.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -76,6 +76,11 @@ body {
   background-color: rgba(255,255,255, 0.8);
   color: inherit;
   
+  #intro {
+    margin-left: 65px;
+    margin-right: 65px;
+  }
+  
   #hits {
     margin-top: 24px;
   }
